@@ -21,6 +21,7 @@ Version 2.9.1
 -------------
 * Don't forget to apply filters to "perflevel" caches detected on recent
   Mac OS X releases, thanks to Michel Lesoinne for the report.
+* Mark HPE Cray Slingshot NICs with subtype "Slingshot".
 
 
 Version 2.9.0
